chinh lôi trong đăng ký tư vấn